# dashtro

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile.dashtro  PLAN.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  package.json  pyproject.toml  requirements.txt
.github/workflows/: build-image.yml  deploy.yml
cloudflared/: config.yml
cms-frontend/: Dockerfile.prod  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.cjs  tsconfig.app.json  vite.config.ts
cms-frontend/src/: App.tsx  index.scss  main.tsx  vite-env.d.ts
cms-frontend/src/hooks/: useCategory.ts  useCollection.ts  useCurrentUser.ts  useDocument.ts  useProject.test.tsx  useProject.ts  useRealtimeDb.ts  useSchema.ts  useSchemaMetaData.ts  useWorkspace.ts
cms-frontend/src/redux/: categorySlice.ts  collectionSlice.ts  documentSlice.test.ts  documentSlice.ts  projectSlice.test.ts  projectSlice.ts  realtimeDbSlice.ts  richTextComponentSlice.ts  rootPathSlice.ts  schemaPresetSlice.ts  schemaSlice.ts  store.ts  workspaceSlice.ts
cms-frontend/src/scss/: DocCollection.scss  Header.scss  Login.scss  Modal.scss  ProjectPage.scss  ProjectSwitcher.scss  ProjectsList.scss  RealtimeDatabase.scss  RichTextComponents.scss  Schema.scss  Settings.scss
cms-frontend/src/ts/: config.ts
cms-frontend/types/: advi-ui.d.ts  theme.d.ts
cms_backend/: .gitignore  Dockerfile  README.md  config.py  main.py  package-lock.json  package.json  requirements.txt
cms_backend/api/: urls.py
cms_backend/api/middleware/: auth_middleware.py
cms_backend/api/serializers/: __init__.py  dynamic_document.py  schema_collection.py  schema_field.py
cms_backend/api/utils/: __init__.py  actor.py  api_key_auth.py  audit_client.py  schema.py  (+6 more)
cms_backend/cms_backend/: settings.py  urls.py
cms_backend/models/: collection.py  field_types.py  project.py  rich_text_component.py  schema.py
cms_backend/routers/: audit.py  auth.py  collections.py  documents.py  field_types.py  media.py  projects.py  realtime_db.py  rich_text_components.py  schema.py  schema_categories.py  sdk_documents.py  sdk_realtime_db.py
cms_backend/scripts/: cms_schema.py  migrate_image_keys.py
cms_backend/tests/: conftest.py  test_api_key_auth.py  test_auth_middleware.py  test_route_separation.py
cms_mcp/: server.py
nginx/: nginx.conf  nginx.prod.conf
sdk/js/: CHANGELOG.md  README.md  package-lock.json  package.json
sdk/python/: CHANGELOG.md  README.md  pyproject.toml
sdk/python/dashtro_client/: __init__.py  client.py
sdk/scripts/: sync-python-version.mjs
(+75 files in other folders)
