[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dashtro"
version = "0.1.0"
requires-python = ">=3.10"
description = "DashTro CMS CLI tools"

[project.scripts]
dashtro = "cms_backend.scripts.cms_schema:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cms_backend*"]
